--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@rainbow-me/rainbowkit": "^2.1.3",
     "@react-three/drei": "^9.108.3",
     "@react-three/fiber": "^8.16.8",
     "@types/jest": "^29.5.12",
+    "@web3auth/ethereum-provider": "^8.10.2",
+    "@web3auth/modal": "^8.10.2",
+    "@web3auth/openlogin-adapter": "^8.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
