adding base for the api-bdd

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES6",                          
-    "module": "commonjs",                     
-    "outDir": "./dist",                       
-    "rootDir": "./",                         
-    "strict": true,                          
-    "esModuleInterop": true,                 
-    "skipLibCheck": true,                    
-    "forceConsistentCasingInFileNames": true 
+    "target": "ES2017",
+    "module": "commonjs",
+    "outDir": "./dist",
+    "rootDir": "./",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
