--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@worldcoin/idkit": "^1.2.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "next": "^14.2.5",
     "typeorm": "^0.3.20"
@@ -30,5 +31,4 @@
       "types": "./build/internal.d.ts"
     }
   }
-
 }
