--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.24.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.166.1"
+    "three": "^0.166.1",
+    "web3": "^4.11.0"
   },
   "devDependencies": {
     "@tanstack/react-query": "^5.51.1",
