--- a/api/package.json
+++ b/api/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
-    "@worldcoin/idkit": "^1.2.2",
+    "@worldcoin/idkit": "^1.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "next": "^14.2.5",
+    "pg": "^8.12.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "typescript": "^5.5.3"
   },
   "exports": {
