--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@worldcoin/idkit": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.3",
     "gsap": "^3.12.5",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
