--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,13 @@
     "@react-three/drei": "^9.108.3",
     "@react-three/fiber": "^8.16.8",
     "@types/jest": "^29.5.12",
+    "@web3auth/ethereum-mpc-provider": "^8.10.2",
     "@web3auth/ethereum-provider": "^8.10.2",
     "@web3auth/modal": "^8.10.2",
+    "@web3auth/modal-react-hooks": "^8.10.2",
     "@web3auth/openlogin-adapter": "^8.8.0",
+    "@web3auth/wallet-services-plugin": "^8.10.2",
+    "@web3auth/web3auth-wagmi-connector": "^6.0.0",
     "@worldcoin/idkit": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -38,6 +42,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.166.1",
+    "wagmi": "^2.10.10",
     "web3": "^4.11.0"
   },
   "devDependencies": {
